# vermouth

./: .gitignore  README.md
.github/workflows/: ci.yml
client/: .env.example  Cargo.toml  linux.sh  windows.bat  zulucrypt.sh
client/src/: config.rs  main.rs
nanokvm/: .env.example  Cargo.toml  script.sh
nanokvm/etc/init.d/: S99vermouth.sh
nanokvm/etc/kvm/scripts/: input-password.sh
nanokvm/src/: config.rs  main.rs
server/: Cargo.toml  example.config.json
server/src/: config.rs  main.rs
