[package]
name = "vermouth_nanokvm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vermouth-nanokvm"
path = "src/main.rs"

[dependencies]
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
    "brotli",
    "charset",
    "deflate",
    "gzip",
    "http2",
    "json",
    "macos-system-configuration",
    "rustls-tls",
    "zstd",
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[target.riscv64gc-unknown-linux-musl]
linker = "riscv64gc-unknown-linux-musl-gcc"
