[package]
name = "vermouth_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vermouth-server"
path = "src/main.rs"

[dependencies]
env_logger = "0.11"
log = "0.4"
ntex = { version = "2.0", features = ["tokio"] }
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
